--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "morgan": "^1.9.1",
     "mpath": ">=0.5.1",
     "multer": "^1.4.2",
-    "nodemon": "^1.19.1",
     "passport": "~0.3.2",
     "passport-facebook": "~2.1.1",
     "passport-google-oauth": "~1.0.0",
@@ -24,10 +23,13 @@
     "passport-twitter": "~1.0.4"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "version": "1.0.0",
-  "devDependencies": {},
+  "devDependencies": {
+    "nodemon": "^1.19.4"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sainaadira/frank-ocean-auth.git"
